Squashed commit of the following:
commit 35f0b8ecf0f40332ead084048a3b41533eaca9c8
Author: RaulgbUMA <100631828+RaulgbUMA@users.noreply.github.com>
Date:   Thu May 23 18:33:19 2024 +0200

    Arreglando un duplicado

commit 0368e54651f30bfd1591537ec87a31fd03f0f0d0
Author: RaulgbUMA <100631828+RaulgbUMA@users.noreply.github.com>
Date:   Thu May 23 18:25:48 2024 +0200

    Squashed commit of the following:

    commit 22afdd7bfb739bf7b52dcbc64b7bd64998261668
    Author: RaulgbUMA <100631828+RaulgbUMA@users.noreply.github.com>
    Date:   Thu May 23 18:22:42 2024 +0200

        Modificación Mapper

    commit bbb34f171190b563f56527aff0720678e88762a0
    Author: bonvieana <bonvieana@gmail.com>
    Date:   Thu May 23 17:43:16 2024 +0200

        Pasan los 403 excepto 2 test

        Co-Authored-By: Anamariagonz7 <164042138+Anamariagonz7@users.noreply.github.com>
        Co-Authored-By: Ana Martín <80093488+amc-uma@users.noreply.github.com>
        Co-Authored-By: RaulgbUMA <100631828+RaulgbUMA@users.noreply.github.com>

    commit b4787a466aa914ee9967487f18c1d9463a676409
    Author: RaulgbUMA <100631828+RaulgbUMA@users.noreply.github.com>
    Date:   Wed May 22 20:11:13 2024 +0200

        Arreglando seguridad

    commit 658eff903843074bd2cdda05950eb5acdd7d6ef5
    Author: RaulgbUMA <100631828+RaulgbUMA@users.noreply.github.com>
    Date:   Mon May 20 14:30:52 2024 +0200

        Trabajando en la seguridad tras tutoría

        - Limpieza de comentarios
        - Resumen de lo demás canal discord seguridad

    commit e44d701d16d5337ab357a63f5d92dd84a2ffca1e
    Author: RaulgbUMA <100631828+RaulgbUMA@users.noreply.github.com>
    Date:   Sun May 19 13:06:02 2024 +0200

        Cambios reunión

        Llegamos a la conclusión de que el fragmento de código de logica centro que hacía que no compilase sobra. Ahora todo funciona bien menos que las pruebas dan un 403. Dudas para tutoría

    commit 4156c24c94090e2aedb1cbd81b3faa4866e5ec38
    Author: RaulgbUMA <100631828+Raul