@@ -1,9 +1,6 @@
 package TECH4LIFE.entidadesJPA.controladores;
 
-import TECH4LIFE.entidadesJPA.dtos.CentroDTO;
-import TECH4LIFE.entidadesJPA.dtos.CentroNuevoDTO;
-import TECH4LIFE.entidadesJPA.dtos.GerenteDTO;
-import TECH4LIFE.entidadesJPA.dtos.GerenteNuevoDTO;
+import TECH4LIFE.entidadesJPA.dtos.*;
 import TECH4LIFE.entidadesJPA.entities.Centro;
 import TECH4LIFE.entidadesJPA.excepciones.CentroExistente;
 import TECH4LIFE.entidadesJPA.excepciones.CentroNoExistente;
@@ -14,18 +11,21 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.util.UriComponentsBuilder;
+import TECH4LIFE.entidadesJPA.security.JwtUtil ;
 
 import java.net.URI;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/centro")
+//@Tag(name="Gestión de centros", description="Operaciones para la gestión de centros")
 public class ControladorCentro {
 
-    private LogicaCentro servicio ;
+    private final LogicaCentro centroService;
 
-    public ControladorCentro(LogicaCentro servicioCentro) {
-        this.servicio = servicioCentro ;
+    public ControladorCentro(LogicaCentro centroService) {
+        this.centroService = centroService ;
     }
 
     // A continuación los gets, posts, puts y deletes que tenga Centro
@@ -37,11 +37,11 @@ public class ControladorCentro {
 
     // Obtener un centro concreto (por la id) (CREO que lo hace un usuario Administrador)
     @GetMapping("/{idCentro}")
-    public ResponseEntity<CentroDTO> verCentro(@PathVariable(name="idCentro")Integer id){
+    public ResponseEntity<CentroDTO> verCentro(@PathVariable Integer idCentro){
 
         try {
             // CODE 200: El centro existe
-            CentroDTO centroDTO = Mapper.toCentroDTO(servicio.getCentroById(id)) ;
+            CentroDTO centroDTO = Mapper.toCentroDTO(centroService.getCentroById(idCentro)) ;
             return ResponseEntity.ok(centroDTO);
 
         } catch (PeticionNoValida e) {
@@ -60,10 +60,10 @@ public class ControladorCentro {
 
     // Permite consultar el gerente de un centro (por la id del centro) (CREO que lo hace un usuario Administrador)
     @GetMapping("/{idCentro}/gerente")
-    public ResponseEntity<GerenteDTO> verGerenteCentro(@PathVariable(name="idCentro")Integer id){
+    public ResponseEntity<GerenteDTO> verGerenteCentro(@PathVariable Integer idCentro){
         try {
             // CODE 200: Devuelve el gerente del centro especificado
-            GerenteDTO gerenteDTO = Mapper.toGerenteDTO(servicio.getGerenteCentroById(id));
+            GerenteDTO gerenteDTO = Mapper.toGerenteDTO(centroService.getGerenteCentroById(idCentro));
             return ResponseEntity.ok(gerenteDTO);
 
         } catch (PeticionNoValida e) {
@@ -80,13 +80,16 @@ public class ControladorCentro {
         }
     }
 
+
     // Obtener la lista de todos los centros (Lo puede hacer usuario Administrador o Gerente)
-    @GetMapping
-    public ResponseEntity<List<CentroDTO>> listaDeCentros() {
+    @GetMapping()
+    public ResponseEntity<List<CentroDTO>> listaDeCentros(@RequestParam(value = "gerente", required = false) Integer gerente) {
 
         try {
             // CODE 200: Devuelve la lista de centros
-            List<CentroDTO> listaCentrosDTO = servicio.getTodosCentros().stream().map(Mapper::toCentroDTO).toList();
+            List<CentroDTO> listaCentrosDTO =
+                    centroService.getTodosCentros(gerente).stream().map(Mapper::toCentroDTO)
+                            .collect(Collectors.toList());
             return ResponseEntity.ok(listaCentrosDTO);
 
         } catch (PeticionNoValida e) {
@@ -111,12 +114,14 @@ public class ControladorCentro {
      *   -------
      */
 
+
     // Elimina un centro (por la id) (CREO que lo hace un usuario Administrador)
     @DeleteMapping("/{idCentro}")
-    public ResponseEntity<?> eliminarCentro(@PathVariable(name="idCentro") Integer id) {
+    public ResponseEntity<?> eliminarCentro(@PathVariable Integer idCentro) {
         try {
+
             // CODE 200: El centro se ha eliminado
-            servicio.eliminarCentro(id) ;
+            centroService.eliminarCentro(idCentro) ;
             return ResponseEntity.ok().build();
 
         } catch (PeticionNoValida e) {
@@ -134,10 +139,11 @@ public class ControladorCentro {
     }
 
     // Permite eliminar una asociación entre un centro y un gerente. (CREO que lo hace un usuario Administrador)
-    public ResponseEntity<?> eliminarGerenteCentro(@PathVariable(name="idCentro")Integer id) {
+    @DeleteMapping("/{idCentro}/gerente")
+    public ResponseEntity<?> eliminarGerenteCentro(@PathVariable Integer idCentro, @RequestParam(value= "gerente", required = false) Integer gerente) {
         try {
             // CODE 200: Devuelve el centro al que se ha asociado el gerente (CREO QUE ES ERRATA DE LA API)
-            servicio.eliminarGerenteCentroById(id) ;
+            centroService.eliminarGerenteCentroById(idCentro,gerente) ;
             return ResponseEntity.ok().build();
 
         } catch (PeticionNoValida e) {
@@ -159,15 +165,18 @@ public class ControladorCentro {
      *   -----
      */
 
+
     // Permite crear un centro nuevo a un administrador (Lo hace un usuario Administrador)
-    @PostMapping
+    // Duda: ¿Cómo que crea un centro y lo DEVUELVE? ¿Cómo lo devuelvo?
+    @PostMapping()
     public ResponseEntity<CentroDTO> addCentro(@RequestBody CentroNuevoDTO centroNuevoDTO, UriComponentsBuilder builder) {
 
         try {
 
             // CODE 201: Se crea el centro y lo devuelve
-            Centro centro = servicio.postCentro(Mapper.toCentro(centroNuevoDTO)) ;
+            Centro centro = centroService.postCentro(Mapper.toCentro(centroNuevoDTO)) ;
             URI uri = builder
+                    .path("/centro")
                     .path(String.format("/%d",centro.getIdCentro()))
                     .build()
                     .toUri() ;
@@ -181,10 +190,10 @@ public class ControladorCentro {
             // CODE 403: Acceso no autorizado
             return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
 
-        } catch (CentroExistente e) {
+        } /*catch (CentroExistente e) {
             // CODE 404: El centro no existe
             return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-        }
+        }*/
     }
 
     /*
@@ -192,14 +201,16 @@ public class ControladorCentro {
      *   ----
      */
 
-    // Actualiza un centro (por la id) (CREO que lo hace un usuario Administrador)
+
+    // Actualiza un centro (por la id) (CREO que lo hace un usuario Gerente me parece)
+    // Duda: El profe no devuelve un ResponseEntity sino un CentroDTO
     @PutMapping("/{idCentro}")
-    public ResponseEntity<CentroDTO> editarCentro(@PathVariable(name="idCentro")Integer id, @RequestBody CentroNuevoDTO centroNuevoDTO) {
+    public ResponseEntity<CentroDTO> editarCentro(@PathVariable Integer idCentro, @RequestBody CentroDTO centroDTO) {
 
         try {
 
             // CODE 200: El centro se ha actualizado
-            servicio.modificarCentro(id, Mapper.toCentro(centroNuevoDTO)) ;
+            centroService.modificarCentro(idCentro, Mapper.toCentro(centroDTO)) ;
             return ResponseEntity.ok().build();
 
         } catch (PeticionNoValida e) {
@@ -218,11 +229,10 @@ public class ControladorCentro {
 
     // Permite añadir una asociación entre un centro y un gerente. (CREO que lo hace un usuario Administrador)
     @PutMapping("/{idCentro}/gerente")
-    public ResponseEntity<CentroDTO> editarGerenteCentro (@PathVariable(name="idCentro")Integer id, @RequestBody GerenteNuevoDTO gerenteNuevoDTO) {
+    public ResponseEntity<CentroDTO> editarGerenteCentro (@PathVariable Integer idCentro, @RequestBody IdGerenteDTO idgerenteDTO) {
         try {
             // CODE 200: Devuelve el centro al que se ha asociado el gerente
-
-            CentroDTO centroDTO = Mapper.toCentroDTO(servicio.modificarGerenteCentroById(id,Mapper.toGerente(gerenteNuevoDTO)));
+            CentroDTO centroDTO = Mapper.toCentroDTO(centroService.modificarGerenteCentroById(idCentro,Mapper.toGerente(idgerenteDTO)));
             return ResponseEntity.ok(centroDTO);
 
         } catch (PeticionNoValida e) {
